iFeature Pro Changelog

****************************

Version 4.1.1 (04-03-12)
-Fixed bug in meta-box-class.php causing unidentified index errors.
-Only apply div wrapper to YouTube and Vimeo embeds when responsive design enabled.

Version 4.1 (03-21-12)
-Added Croatian language files.
-Cleaned up core.pot translation template.
-Fix for Google +1 button.
-Fixed custom Callout button image for blog page. 
-Changed <!--more--> link text to "Read more…".
-Added JS to wrap YouTube and Vimeo embeds in flex-video class.

Version 4.0.8 (03-14-12)
-Fix for table in calendar widget. 
-Fixed custom slide captions.
-Increased Carousel image limit.
-Increased Slider image limit.
-Updated static CSS stylesheet with table code.
-Updated sidebar widget names to be more clear. 
-Clear fix for post content.

Version 4.0.7 (03-08-12)
-Fixed typo in theme options panel.
-Fix for page titles.
-Conditional to stop breadcrumb links from appearing on attachment pages. 
-Removed some unecessary CSS and images.
-Added browser specific HTML classes to allow IE version specific CSS.
-Fixed Google Font library call to be SSL friendly. 
-Featured image fix for IE9.

Version 4.0.6 (03-01-12)
-Additional margin fix for HTML tables.
-Updated Foundation CSS.
-Removed 20 slide limit from custom slides. 
-Adjusted doctype. 
-Removed unnecessary breadcrumb option from header options. 
-Added Banner URL option.
-Changed Update API function name to avoid plugin conflicts. 
-Removed legacy icon margin option.
-CSS tweaks.
-Removed HTML comment before doctype call, fixes IE quirks mode issue. 
-Added Apple Touch Icon option. 

Version 4.0.5 (02-23-12)
-Fix for HTML tables.
-Added align:none option for featured images.
-Responsive design adjustments.
-Added missing translation wrapper to Tags: text. 
-Added a few IE related CSS fixes.
-Modified breadcrumb style, made them a page element and a templates option.
-Removed archive title and search result text from templates.
-Improved post index pagination.
