@@ -24,9 +24,10 @@
 	<!--Begin @synapse before content sidebar hook-->
 		<?php synapse_before_content_sidebar(); ?>
 	<!--End @synapse before content sidebar hook-->
-	<?php if (have_posts()) : ?>
 	
-		<div id="content" class="<?php echo $content_grid; ?>">
+	<div id="content" class="<?php echo $content_grid; ?>">
+	
+	<?php if (have_posts()) : ?>
 				
 		<!--Begin @synapse before_archive hook-->
 			<?php synapse_before_archive(); ?>
